--- a/product-manager.html
+++ b/product-manager.html
@@ -126,7 +126,7 @@
 <p><span class="badge badge-light">Ottawa, Canada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/product-owner-po-%E2%80%93-analista-s%C3%AAnior-13043'>Product Owner (PO) ? Analista S?nior - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/product-owner-po-%E2%80%93-analista-s%C3%AAnior-13043'>Product Owner (PO) ? Analista S?nior - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -173,7 +173,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://tide.workable.com/j/1D4E042968'>Tide Business Banking - Jobs: Product Owner - Credit - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tide.workable.com/j/1D4E042968'>Tide Business Banking - Jobs: Product Owner - Credit - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -245,7 +245,7 @@ other?...</p>
 <p><span class="badge badge-light">Ottawa, Elgin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shopify/e7c19678-9149-4866-b649-7665806219f9'>Shopify - Senior Product Designer, International Growth</a></h5> 
+<h5><a href='https://jobs.lever.co/shopify/e7c19678-9149-4866-b649-7665806219f9'>Shopify - Senior Product Designer, International Growth</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -261,7 +261,7 @@ other?...</p>
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://itech.applytojob.com/apply/LqfFXEBsl2/Product-Owner-Digital'>Product Owner - Digital - iTech Media - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://itech.applytojob.com/apply/LqfFXEBsl2/Product-Owner-Digital'>Product Owner - Digital - iTech Media - Career Page</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -269,7 +269,7 @@ other?...</p>
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://flowtify.recruiterbox.com/jobs/fk0jqzl'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://flowtify.recruiterbox.com/jobs/fk0jqzl'>
     Product Owner (m/w/d) at Flowtify GmbH
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -312,11 +312,11 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://heavenhr.workable.com/j/0067C34BF6'>HeavenHR - Jobs: Product Manager - SaaS (m/f/x) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://heavenhr.workable.com/j/0067C34BF6'>HeavenHR - Jobs: Product Manager - SaaS (m/f/x) - Apply online</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/extrahop-networks-inc/job/ofoBafw8'>ExtraHop Networks, Inc. Careers - Principal Product Manager, Security</a></h5> 
+<h5><a href='https://jobs.jobvite.com/extrahop-networks-inc/job/ofoBafw8'>ExtraHop Networks, Inc. Careers - Principal Product Manager, Security</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -333,7 +333,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p>6 days ago ... Job Summary: The Technology and Digital Platforms Product Manager is 
 responsible for the overall management of one or more technology solutions for...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://join.join.com/jobs/262280-product-designer-f-m-d'>Job @ JOIN Solutions (Berlin): Product Designer (f... | JOIN</a></h5> 
+<h5><a href='https://join.join.com/jobs/262280-product-designer-f-m-d'>Job @ JOIN Solutions (Berlin): Product Designer (f... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -345,7 +345,7 @@ responsible for the overall management of one or more technology solutions for..
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://comtravo.join.com/jobs/258303-senior-product-owner-f-m-x-data-science-focus'>Job @ Comtravo (Berlin): Senior Product Owner (f/m... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://comtravo.join.com/jobs/258303-senior-product-owner-f-m-x-data-science-focus'>Job @ Comtravo (Berlin): Senior Product Owner (f/m... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -434,7 +434,7 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/linkedin/job/oCNAafwT'>LinkedIn Careers - Anaplan Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/linkedin/job/oCNAafwT'>LinkedIn Careers - Anaplan Product Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
